tests/textual/error/modInteger-string-wrong-1st-argument.uplc
(program 1.0.0[[(builtin modInteger)(con string "Ola")](con integer 10)])